# Genetic-Algorithm

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  bat_root_guide.txt  config.json  input_ga.txt  snode.sh  task.sh
LSODA/: LSODA.cpp  LSODA.h  LSODA_eigen.cpp  LSODA_eigen.h  helper.h
baselines/: 1000.txt  1032.txt  143.txt  172.txt  200.txt  2000.txt  206.txt  2064.txt  250.txt  258.txt  333.txt  344.txt  500.txt  516.txt  AP_1000.txt  AP_1032.txt  AP_129.txt  AP_148.txt  AP_172.txt  AP_2000.txt  AP_206.txt  AP_2064.txt  AP_217.txt  AP_225.txt  AP_250.txt  AP_258.txt  AP_300.txt  AP_333.txt  AP_344.txt  AP_4130.txt  AP_500.txt  AP_516.txt
configs/: config.json
ga_output/: AP_best.txt  Autosave.txt  SD.txt  average.txt  best.txt  low_err.txt  output1.txt
scripts/: README  direct_config_synth_input.json  dump_AP.py  generate_direct_problem.py  param_boxplot.py  plot.py  plotCSV.py
scripts/TonyData/Matrec/: config1.json  config3.json  configC2.json  process.py
scripts/TonyData/Matrec/1/: 20200916 - Atrial EHM - 1 Hz pacing - rec8 - 025 Hz.txt  20200916 - Atrial EHM - 1 Hz pacing - rec8 - 05 Hz.txt  20200916 - Atrial EHM - 1 Hz pacing - rec8 - 1 Hz.mat  20200916 - Atrial EHM - 1 Hz pacing - rec8 - 1 Hz.txt
scripts/TonyData/Matrec/3/: 20200903 - Atrial EHM - 3 Hz pacing - rec18 - 05 Hz.mat  20200903 - Atrial EHM - 3 Hz pacing - rec18 - 05 Hz.txt  20200903 - Atrial EHM - 3 Hz pacing - rec18 - 1 Hz.mat  20200903 - Atrial EHM - 3 Hz pacing - rec18 - 1 Hz.txt  20200903 - Atrial EHM - 3 Hz pacing - rec18 - 2 Hz.mat  20200903 - Atrial EHM - 3 Hz pacing - rec18 - 2 Hz.txt
scripts/TonyData/Matrec/c1/: 20200420 - Atrial EHM - Control - rec10 - 2 Hz.mat  20200420 - Atrial EHM - Control - rec10 - 3 Hz.mat
scripts/TonyData/Matrec/c2/: 20200907 - Atrial EHM - Control - rec2 - 025 Hz.txt  20200907 - Atrial EHM - Control - rec2 - 05 Hz.txt  20200907 - Atrial EHM - Control - rec2 - 1 Hz.mat  20200907 - Atrial EHM - Control - rec2 - 1 Hz.txt
scripts/TonyData/baselines1Hz/: 20200916 - Atrial EHM - 1 Hz pacing - rec8 - 025 Hz.txt  20200916 - Atrial EHM - 1 Hz pacing - rec8 - 05 Hz.txt  20200916 - Atrial EHM - 1 Hz pacing - rec8 - 1 Hz.txt  process.py
scripts/TonyData/baselines3Hz/: 20200903 - Atrial EHM - 3 Hz pacing - rec18 - 05 Hz.txt  20200903 - Atrial EHM - 3 Hz pacing - rec18 - 1 Hz.txt  20200903 - Atrial EHM - 3 Hz pacing - rec18 - 2 Hz.txt  process.py
scripts/TonyData/baselinesControl1/: 20200907 - Atrial EHM - Control - rec2 - 025 Hz.txt  20200907 - Atrial EHM - Control - rec2 - 05 Hz.txt  20200907 - Atrial EHM - Control - rec2 - 1 Hz.txt  process.py
scripts/TonyData/baselinesControl2/: 20200420 - Atrial EHM - Control - rec10 - 1 Hz.txt  20200420 - Atrial EHM - Control - rec10 - 2 Hz.txt  20200420 - Atrial EHM - Control - rec10 - 3 Hz.txt
scripts/b-fixed/: direct_config_complete_state.json  direct_config_for_fit.json  direct_config_hh_check.json  direct_config_stat_test.json  direct_config_synth_input.json  plot.py  showFit.py  showSteadyState.py  test_hh_ga.json
scripts/b-manual-files/: README  config.json  dc_long.json  direct_config_default.json  direct_config_synth_input.json  plot.py  plotCSV.py
scripts/bs-KC-2IK1/: 1000.txt  2000.txt  500.txt
scripts/misc/: compare.py  specialCSV.py
src/: base_mutation.h  basic_function_functor.cpp  basic_function_functor.h  basic_population.cpp  basic_population.h  cauchy_mutation.cpp  cauchy_mutation.h  cell_chain.cpp  cell_chain.h  cellml_ode_solver.h  fitness_function.cpp  fitness_function.h  fitness_functors.cpp  fitness_functors.h  ga.h  genetic_algorithm.h  gradient_descent.cpp  gradient_descent.h  initial_population.cpp  initial_population.h  kernik_clancy_model.cpp  kernik_clancy_model.h  main.cpp  maleckar.cpp  maleckar.h  maleckar_model.cpp  maleckar_model.h  mcmc.cpp  mcmc.h  nelder_mead.h  objective.cpp  objective.h  optimization_problem.cpp  optimization_problem.h  optimization_problem_rest.h  penalty.h  polynomial_mutation.cpp  polynomial_mutation.h  pso.h  random_number_generator.cpp  (+15 more)
src/ord_model/: atrium.cpp  consts.cpp  consts.h  main3.cpp
tests/: test_examples.cpp  test_test_functions.cpp  test_tournament_selection.cpp
